<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:orientation="vertical"
    tools:context=".Controllers.Activities.activity_detail_neighbour">

    <FrameLayout
        android:id="@+id/Layout"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="402dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/avatar_detail"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ajouter_favoris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="340dp"
        android:background="@android:drawable/editbox_background"
        android:backgroundTint="#EDEDED"
        android:clickable="true"
        android:contentDescription="etoile_favoris"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/Layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout"
        app:layout_constraintVertical_bias="0.695"
        app:srcCompat="@drawable/ic_favoris_off" />

    <TextView
        android:id="@+id/nom_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/Layout"
        app:layout_constraintStart_toStartOf="@+id/Layout" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/menu_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="@+id/Layout"
        app:layout_constraintStart_toStartOf="@+id/Layout"
        app:layout_constraintTop_toTopOf="@+id/Layout"
        tools:visibility="visible" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="194dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/editbox_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Layout">

        <TextView
            android:id="@+id/nom_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Nom Prenom"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/adresse_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_adresse"
            android:text="Adresse" />

        <TextView
            android:id="@+id/telephone_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_telephone"
            android:text="Téléphone" />

        <TextView
            android:id="@+id/site_web_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_facebook"
            android:text="Facebook" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="131dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="61dp"
        android:background="@android:drawable/editbox_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.383">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="A propos de moi"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A propos de moi"
            android:textSize="24sp">

            <TextView
                android:id="@+id/a_propos_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="TextView" />
        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>